Fix about page text contrast for accessibility

--- a/src/pages/homePage.css
+++ b/src/pages/homePage.css
@@ -169,8 +169,8 @@ nav {
     height: 100%;
     font-size: var(--fontsize);
     text-align: center;
-    text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.523);
-    background-color: rgba(255, 255, 255, 0.336);
+    text-shadow: -1px 1px 1px rgba(95, 95, 95, 0.523);
+    background-color: rgba(255, 255, 255, 0.496);
 }
 
 .about-page a{
@@ -382,6 +382,7 @@ nav {
     }
     .hidden {
         display: none;
+        
     }
     .hamburger-menu {
         background: none;
